tests/fail/nightly/input_not_str.rs
fn main() {
    sscanf::sscanf!(5usize, "{}", usize);
    sscanf::sscanf!(b"5", "{}", usize);
}
